--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/Miso-Todo/Miso-Todo-API",
   "dependencies": {
-    "http": "^0.0.1-security",
-    "express": "^4.18.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "routes": "^2.1.0",
     "sequelize": "^6.23.2",
     "sequelize-cli": "^6.5.1"
   },
